# osm_firmware_v2

./: .gitignore  .gitmodules  FreeRTOSConfig.h  License  Makefile  Makefile.base  Makefile.bootloader  Makefile.firmware  README.md  __init__.py  adcs.c  adcs.h  base.c  base_types.h  basic_fixed.c  basic_fixed.h  binding.py  binding_test.py  bootloader.mk  cal_tool.py  cmd.c  cmd.h  common.c  common.h  config.h  env01.mk  firmware.mk  flash_data.h  gpio.c  gpio.h  hpm.c  hpm.h  htu21d.c  htu21d.h  i2c.c  i2c.h  inputs.c  inputs.h  io.c  io.h  (+56 more)
basic_fixed/: Makefile  basic_fixed.c  basic_fixed.h  basic_fixed_test.py  main.c
bootloader/: Makefile  bootloader.c  main.c  pinmap.h  stm32l4.ld  stm32l433.ld  stm32l452.ld
comms/include/: at_base.h  at_esp.h  at_mqtt.h  at_poe.h  at_wifi.h  comms.h  comms_identify.h  linux_comms.h  lw.h  rak3172.h  rak4270.h
comms/src/: at_base.c  at_esp.c  at_mqtt.c  at_poe.c  at_wifi.c  common.c  comms.c  comms_identify.c  e_24lc00t.c  linux_comms.c  lw.c  rak3172.c  rak4270.c
config_gui/: config_gui_manual.odt  create_static_stm.sh
config_gui/release/: README.md  config_gui.py  config_gui_modbus.py  create_gui_exe.sh  firmware_update.py  gui_binding_interface.py  handshaking_lines.py  json_config.py  load_json_config.py  macos_setup.py  modbus_db.py  modbus_funcs.py  save_json_config.py  static_program.sh
core/: stm32l433.ld  stm32l452.ld
core/include/: adcs.h  base_types.h  can_comm.h  cmd.h  common.h  comms.h  config.h  debug_mode.h  flash_data.h  i2c.h  io.h  log.h  lorawan.h  measurements.h  measurements_mem.h  modbus.h  modbus_measurements.h  modbus_mem.h  passthrough.h  persist_config.h  persist_config_base.h  persist_config_header.h  persist_config_header_base.h  persist_config_header_model.h  pinmap.h  platform.h  platform_base_types.h  protocol.h  rak4270.h  ring.h  rs232.h  sleep.h  sos.h  uart_rings.h  uarts.h  update.h  value.h  version.h  w1.h
core/src/: adcs.c  base.c  can_comm.c  cmd.c  common.c  comms.c  debug_mode.c  env01.c  i2c.c  io.c  log.c  lorawan.c  main.c  measurements.c  measurements_env01.c  measurements_mem.c  modbus.c  modbus_measurements.c  modbus_mem.c  passthrough.c  persist_base.c  persist_config.c  persist_config_base.c  platform_common.c  protocol.c  rak4270.c  rs232.c  sen01.c  sleep.c  stm.c  uart_rings.c  uarts.c  update.c  value.c  version.c  w1.c
debug/: README.md  debug_influx.py  fake_meter.py  gdb_exec_file  gdb_export_buffer  get_readings.py  libsocketcan.py  proc_data.py  serial_logging.py
debug/can/: setup_real_canbus.sh
docs/: README.md  commands.md  config_gui_guide.adoc  config_gui_guide.md  config_gui_manual.adoc  config_gui_manual.md  guide_config_gui.tex  init_design  lw_protocol_doc  modbus_registers  modbus_registers.md  osm_firmware_getting_started.adoc  osm_firmware_getting_started.md  osm_lorawan.adoc  osm_lorawan.md  programming_instructions  stm_dev.md
docs/protocols/: lorawan_protocols.md  mqtt_json_protocol.md
linux/: Makefile  linux.mk
linux/core/: stm32l452.ld
linux/include/: platform_base_types.h
linux/peripherals/: basetypes.py  comms_connection.py  hpm_virtual.py  i2c_basetypes.py  i2c_client.c  i2c_client.py  i2c_htu21d.py  i2c_server.py  i2c_veml7700.py  modbus_server.py  socket_server_base.py  w1_server.py
linux/src/: comms.c  sleep.c  uarts.c  version.c
lorawan_protocol/: cs4_ttn_protocol.js  cs_protocol.js  debug.js  hl_protocol.js  lorawan_protocols.md  protocol.js
model/: README.md  env01.mk  env01_at_wifi.mk  env01c.mk  env01c_at_wifi.mk  linux.mk  penguin.mk  penguin_at_wifi.mk  sens01.mk  sens01_default_mem.json
model/env00/: CMakeLists.txt  sdkconfig
model/env00/main/: CMakeLists.txt  env00.c  jsonblob.c  model_config.h  model_pinmap.h
model/env01/: config_tool.c  env01.c  env01.h  env01_config.h  env01_pinmap.h  model.h  model_pinmap.h  persist_config.c  persist_config.h  persist_config_header.h  persist_config_header_model.h  persist_config_model.c  pinmap.h  types.h
model/env01_at_wifi/: env01.c  env01_at_wifi.c  env01_at_wifi.h  env01_at_wifi_config.h  env01_at_wifi_pinmap.h  env01_config.h  model.h  model_config.h  model_pinmap.h
model/env01c/: config_tool.c  env01c.c  env01c.h  env01c.mk  env01c_config.h  env01c_pinmap.h  model.c  model.h  model_config.h  model_pinmap.h
model/env01c_at_wifi/: env01c_at_wifi.c  env01c_at_wifi.h  model.h  model_config.h  model_pinmap.h
model/env01d_at_poe/: env01d_at_poe.mk  model.c  model_config.h  model_pinmap.h
model/env01d_at_wifi/: env01d_at_wifi.mk  model.c  model_config.h  model_pinmap.h
model/env01d_lw/: env01d_lw.mk  model.c  model_config.h  model_pinmap.h
model/env01f_at_poe/: env01f_at_poe.mk  model.c  model_config.h  model_pinmap.h
model/env01f_at_wifi/: env01f_at_wifi.mk  model.c  model_config.h  model_config_update.c  model_pinmap.h
model/env01f_lw/: env01f_lw.mk  model.c  (+3 more)
model_attic/: README.md  env01a.mk  env01b.mk  env01b_at_wifi.mk  env01c_at_wifi.mk  env01c_sen54.mk  env01d.mk  env01d_at_wifi.mk  penguin_at_wifi.mk  sens01.mk
model_attic/env01a/main/: CMakeLists.txt  env00.c  model.c  model.h  model_config.h  model_pinmap.h
model_attic/pp01a/: CMakeLists.txt  pp01a.mk
model_attic/pp01a/main/: model.c  model_config.h  model_pinmap.h
network/: protocol.js
ports/: base.mk  esp32.mk  linux.mk  stm.mk
python/: .coveragerc  __init__.py  binding.py  binding_test.py  config_gui.py  dev_gui.py  lw_fw_download.py  modbus_db.py  modbus_templates.db  monitor.py  osm_test.py  osm_test_config.json  penguin_at_wifi.json  spawn_network.py  spawn_network_example.json  test_response_time.py  wifi_fw_download.py
scripts/: config_save.sh  config_wipe.sh  load.sh  program.sh
stm/: stm.mk
tests/: Makefile  Makefile.basic_fixed  Makefile.ring_test  Makefile.test  Makefile.value  basic_fixed_test.py  blob_empty_send.c  blob_tests.py  ring.c  ring_test.c  ring_test.mk  test.h  tests.mk  value.c  values_test.c  values_test.mk
tools/: Makefile  README.md  base.c  main.c  measurements_mem.c  memory_template.json  modbus_mem.c  read_json.c  upgrade.py  write_json.c
(+683 files in other folders)
